z-index render fix

--- a/app/src/components/SmoothDropdown/SmoothDropdown.css
+++ b/app/src/components/SmoothDropdown/SmoothDropdown.css
@@ -4,7 +4,7 @@
 
 .dd {
   position: absolute;
-  z-index: 2;
+  z-index: 10;
   width: 100%;
   left: 5px;
   right: 5px;
